--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         .bar {
-            fill: steelblue;
+            fill: rgb(0, 255, 64);
         }
     </style>
     <script src="https://d3js.org/d3.v4.min.js"></script>
