--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
 </head>
 <body> 
     
-        <div style="margin-left: auto; margin-right: 5px; border: 1px solid red; width: 50%;">
-                <center>103年度村里長選舉</center>
-                </div>  
+        <center> <div style="margin-left: auto; margin-right: 5px; border: 1px solid red; width: 50%;">
+                103年度村里長選舉
+                </div>  </center>
 
 <svg width="600" height="500"></svg>
 <script>
