--- a/test.html
+++ b/test.html
@@ -13,6 +13,8 @@
         <div style=" border: 1px solid red; width: 50%;">
                 <center>103年度村里長選舉</center>
                 </div>  
+<br>
+<marquee  behavior="alternate"> 里長所屬黨籍人數比較</marquee>
 
 <svg width="600" height="500"></svg>
 <script>
